text menu changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Invest Notes</string>
 
     <string name="menu_01">Menu</string>
-    <string name="menu_02">Bank</string>
+    <string name="menu_02">Stock</string>
     <string name="menu_03">Add</string>
     <string name="menu_04">Stats</string>
     <string name="menu_05">History</string>
