--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="menu_04">Stats</string>
     <string name="menu_05">History</string>
     <string name="side_menu_about">About</string>
+    <string name="label_add_item">ADD ITEM</string>
+    <string name="label_history">HISTORY</string>
+    <string name="label_stats">STATS</string>
+    <string name="label_stock">STOCK</string>
 </resources>
